@@ -159,6 +159,9 @@ information about a particular change.
 
 - QNetworkConfiguration::bearerName() removed, and bearerTypeName() should be used.
 
+- qmake
+
+  * several functions and built-in variables were modified to return normalized paths.
 
 ****************************************************************************
 *                           General                                        *
